<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorLight"
    android:gravity="center"
   >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:minHeight="48dp"
        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:minHeight="48dp"
        />

    <Button
        android:id="@+id/compareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_compare"
        android:textSize="20sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorLight"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_result"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorLight"
        />

</LinearLayout>